@@ -2,6 +2,8 @@ Black List Scanning Bot Module for NeoStats Changelog.
 Fish (F) & Mark (M) & DeadNotBuried (D)
 ==============================================================================
 3.0.b1-dev
+ - Fix the lookup crash when user had signed off and left a dangling pointer (D)
+ - don't akill excluded users/hosts (D)
  - add ircbl.ahbl.org to default black lists (D)
  - Fix check for NOBAN on add (D)
 3.0.a3
